fix: footer & hero header align

--- a/src/components/Layout/components/Footer/Footer.module.scss
+++ b/src/components/Layout/components/Footer/Footer.module.scss
@@ -27,10 +27,14 @@
   align-items: center;
   padding-bottom: 24px;
 
+  @include b-d(lg) {
+    grid-template-columns: auto auto;
+    padding-bottom: 40px;
+  }
+
   @include b-d(md) {
     grid-template-columns: auto;
     gap: 40px;
-    justify-content: center;
     justify-items: center;
     padding-bottom: 36px;
   }
@@ -69,8 +73,11 @@
 }
 
 .menu {
-  @include b-up(md) {
-    justify-self: end;
+  justify-self: center;
+
+  @include b-btw(md, lg) {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
   }
 
   @include b-d(md) {
