--- a/src/containers/Product/component/SectionHero/SectionHero.module.scss
+++ b/src/containers/Product/component/SectionHero/SectionHero.module.scss
@@ -21,6 +21,10 @@
   }
 }
 
+.heading {
+  text-align: center;
+}
+
 .colLeft {
   @include b-d(lg) {
     display: grid;
